<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sixdataice.activity.ActivityDataIce">

    <TextView
        android:id="@+id/titleDataIce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:text="@string/data_ice"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addDataIce"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#B8CDD8"
        android:text="@string/add"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resultAllDataIce"
        app:layout_constraintTop_toBottomOf="@id/editPrice" />

    <Button
        android:id="@+id/resultAllDataIce"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:background="#3584A8"
        android:text="@string/all"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <Button
        android:id="@+id/resultNameDataIce"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#3584A8"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultAllDataIce" />

    <Button
        android:id="@+id/resultTypesDataIce"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#3584A8"
        android:text="@string/types"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultNameDataIce" />

    <Button
        android:id="@+id/resultWeightDataIce"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#3584A8"
        android:text="@string/weight"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTypesDataIce" />

    <Button
        android:id="@+id/resultNamesCaloriePriceDataIce"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#3584A8"
        android:text="@string/name_calorie_price"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultWeightDataIce" />

    <TextView
        android:id="@+id/resultTextDataIce"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:hint="@string/data_ice"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resultNameDataIce"
        app:layout_constraintTop_toBottomOf="@+id/addDataIce" />

    <EditText
        android:id="@+id/editId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:hint="@string/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDataIce" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editId" />

    <EditText
        android:id="@+id/editCalorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:hint="@string/calorie_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:hint="@string/types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCalorie" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:hint="@string/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTypes" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:hint="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />



</androidx.constraintlayout.widget.ConstraintLayout>