<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    tools:context=".fourflower.activity.ActivityFlower">

    <FrameLayout
        android:id="@+id/topFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <FrameLayout
        android:id="@+id/bottomFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topFragment"/>

    <Button
        android:id="@+id/addTopFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_top"
        android:background="@color/color_flower"
        app:layout_constraintBottom_toTopOf="@id/addBottomFragment"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addFlower"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/add_flower"
        android:background="@color/color_flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/removeBottomFragment"
        app:layout_constraintStart_toEndOf="@+id/addBottomFragment" />

    <Button
        android:id="@+id/removeTopFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/remove_top"
        android:background="@color/color_flower"
        app:layout_constraintBottom_toTopOf="@+id/removeBottomFragment"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/removeBottomFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/remove_bottom"
        android:background="@color/color_flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addBottomFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_bottom"
        android:background="@color/color_flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>